feat:  1.server chat聊天模块相关结构体和表
